tests/paczka1/small_fuzzy/92728799.err
Error in line 1: aHA S505 34,5
Error in line 4: v6jcPp5 S781 36,8
